added password update

--- a/resources/sass/booker.scss
+++ b/resources/sass/booker.scss
@@ -39,3 +39,14 @@ table#my-reservations {
     // left: 20px;
   }
 
+
+  //EDIT PROFILE PAGE
+  .edit-profile input{
+    border-bottom: 1px solid #000;
+    width: 100%;
+  }
+
+  .edit-profile button{
+    border: 1px solid #000;
+    margin-top: 40px;
+  }
